2011-09-12  Arko Saha  <arko@motorola.com>

        Selectstart is not fired when selection was created by arrow keys.
        https://bugs.webkit.org/show_bug.cgi?id=60430

        Reviewed by Ryosuke Niwa.

        * fast/events/selectstart-by-arrow-keys-expected.txt: Added.
        * fast/events/selectstart-by-arrow-keys-prevent-default-expected.txt: Added.
        * fast/events/selectstart-by-arrow-keys-prevent-default.html: Added.
        * fast/events/selectstart-by-arrow-keys.html: Added.

2011-09-12  Ben Wagner  <bungeman@chromium.org>

        Chromium shadow-buffer-partial test change.
        https://bugs.webkit.org/show_bug.cgi?id=67849

        Reviewed by Kenneth Russell.

        * platform/chromium/test_expectations.txt:

2011-09-12  Kentaro Hara  <haraken@google.com>

        Implement a HashChangeEvent constructor for JSC
        https://bugs.webkit.org/show_bug.cgi?id=67924

        Reviewed by Sam Weinig.

        hash-change-event-constructor.html checks the behavior of the HashChangeEvent constructor.

        * fast/events/constructors/hash-change-event-constructor-expected.txt: Added.
        * fast/events/constructors/hash-change-event-constructor.html: Added.
        * platform/chromium/test_expectations.txt: Skipped hash-change-event-constructor.html, since V8 does not yet have the HashChangeEvent constructor.

2011-09-12  Nate Chapin  <japhet@chromium.org>

        Add video-zoom-controls.html to chromium expectations
        for leopard gpu.

        * platform/chromium/test_expectations.txt:

2011-09-12  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: Runtime.callFunctionOn does not accept arguments that evaluate to false.
        https://bugs.webkit.org/show_bug.cgi?id=67934

        Reviewed by Tony Gentilcore.

        * inspector/runtime/runtime-setPropertyValue.html:

2011-09-12  Kentaro Hara  <haraken@google.com>

        Implement a WebKitAnimationEvent constructor for V8